--- a/autorizz/autorizz.csproj
+++ b/autorizz/autorizz.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="repository\" />
+  </ItemGroup>
+
 </Project>
