изменён способ вывода окна и добавлен tabcontrol

--- a/WPF-LoginForm/WPF-LoginForm.csproj
+++ b/WPF-LoginForm/WPF-LoginForm.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Page Include="CustomControls\BindablePasswordBox.xaml">
       <SubType>Designer</SubType>
